<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/txt_btn_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbx_rphone" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="700dp"
        android:fontFamily="@font/adumu"
        android:text="@string/app_name"
        android:textColor="@color/yellow"
        android:textSize="30pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_rlogin"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="510dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_login"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_rlogin"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="660dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_rlogin"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/lbl_rpassword"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="310dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_password"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_rpassword"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginBottom="460dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:password="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_rpassword"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/lbl_remail"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_email"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_remail"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="260dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_remail"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/lbl_rfname"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="250dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_fname"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_rfname"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="60dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_rfname"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/lbl_rlname"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="250dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_lname"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_rlname"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="140dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_rlname"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/lbl_rphone"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="250dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/txt_phone"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tbx_rphone"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="340dp"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:inputType="text"
        android:maxLength="9"
        android:phoneNumber="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_rphone"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/btn_rregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/txt_btn_register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbx_rphone"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>