<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <!--Gorna Nawigacja -->
    <ImageButton
        android:id="@+id/btn_addbalance"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="664dp"
        android:layout_height="30pt"
        android:layout_width="30pt"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/btnplus"
        android:scaleType="fitCenter"/>

    <TextView
        android:id="@+id/lbl_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="683dp"
        android:fontFamily="@font/adumu"
        android:text="@string/lbl_balance"
        android:textColor="@color/yellow"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_addbalance"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tbx_balance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="683dp"
        android:fontFamily="@font/adumu"
        android:text="999999"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lbl_balance"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Itemy na bialym elemencie -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="400dp"
        android:layout_height="600dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addbalance"
        app:layout_constraintVertical_bias="0.502">

        <ImageView
            android:id="@+id/lavatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="138dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="122dp"
            android:layout_marginBottom="400dp"
            android:foreground="@drawable/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lbl_txt_alogin"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="370dp"
            android:text="@string/txt_alogin"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lavatar" />

        <TextView
            android:id="@+id/lbl_alogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="348dp"
            android:text=" "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_txt_alogin"
            app:layout_constraintTop_toBottomOf="@+id/lavatar" />

        <TextView
            android:id="@+id/lbl_txt_aemail"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="305dp"
            android:text="@string/txt_aemail"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_txt_alogin" />

        <TextView
            android:id="@+id/lbl_aemail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="302dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/lbl_txt_aemail"
            app:layout_constraintTop_toBottomOf="@+id/lbl_alogin"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/lbl_txt_afname"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="247dp"
            android:text="@string/txt_afname"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lbl_afname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_txt_aemail" />

        <TextView
            android:id="@+id/lbl_afname"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_txt_afname"
            app:layout_constraintTop_toBottomOf="@+id/lbl_aemail" />

        <TextView
            android:id="@+id/lbl_txt_alname"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="294dp"
            android:layout_marginBottom="208dp"
            android:text="@string/txt_alname"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_txt_afname" />

        <TextView
            android:id="@+id/lbl_aalname"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="197dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lbl_txt_alname"
            app:layout_constraintTop_toBottomOf="@+id/lbl_afname" />

        <TextView
            android:id="@+id/lbl_txt_aphone"
            android:layout_width="82dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="294dp"
            android:layout_marginBottom="156dp"
            android:text="@string/txt_aphone"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_txt_alname" />

        <TextView
            android:id="@+id/lbl_aphone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="147dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/lbl_txt_aphone"
            app:layout_constraintTop_toBottomOf="@+id/lbl_aalname"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginEnd="124dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/txt_signout"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_aphone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Dolne navi -->
    <ImageButton
        android:id="@+id/btn_bet"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="318dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_matches"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/matches"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_withdraw"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/withdraw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_account"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_marginEnd="321dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_edittext"
        android:foreground="@drawable/account_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>